Update client Filter tests
* Moved FilterClient to FilterBuilder
* Added validation logic in tests